Fix row wrapping

--- a/app/assets/stylesheets/history.css.scss
+++ b/app/assets/stylesheets/history.css.scss
@@ -59,7 +59,7 @@ table.history {
     }
   }
   td.result {
-    width: 50px;
+    width: 45px;
   }
   td.timeline {
     text-align: center;
